--- a/docs/3.hello.md
+++ b/docs/3.hello.md
@@ -7,7 +7,7 @@ description: words in place
 slug: /heyooo
 --- 
 
-# page title heho
+# page title BAH
 
 This is my **firk Docusaurus document**!
 
