--- a/versioned_docs/version-1.0/3.hello.md
+++ b/versioned_docs/version-1.0/3.hello.md
@@ -7,9 +7,11 @@ description: words in place
 slug: /heyooo
 --- 
 
-# banfust bonharch
+# banfust bonharch montegue
 
 This is my **firk Docusaurus document**!
+
+some mantis shrimp travel by doing backflips
 
 export const Highlight = ({children, color}) => (
   <span
