that says the bibble

--- a/versioned_docs/version-1.0/3.hello.md
+++ b/versioned_docs/version-1.0/3.hello.md
@@ -13,6 +13,8 @@ This is my **firk Docusaurus document**!
 
 some mantis shrimp travel by doing backflips
 
+the bible has been translated into Klingon
+
 export const Highlight = ({children, color}) => (
   <span
     style={{
