--- a/versioned_docs/version-1.0/3.hello.md
+++ b/versioned_docs/version-1.0/3.hello.md
@@ -15,6 +15,8 @@ some mantis shrimp travel by doing backflips
 
 the bible has been translated into Klingon
 
+the nobel prize was first awarded in 1901
+
 export const Highlight = ({children, color}) => (
   <span
     style={{
