--- a/versioned_docs/version-1.0/3.hello.md
+++ b/versioned_docs/version-1.0/3.hello.md
@@ -17,6 +17,8 @@ the bible has been translated into Klingon
 
 the nobel prize was first awarded in 1901
 
+A can of spam is opened every four seconds (in 2002)
+
 export const Highlight = ({children, color}) => (
   <span
     style={{
