--- a/versioned_docs/version-1.0/3.hello.md
+++ b/versioned_docs/version-1.0/3.hello.md
@@ -15,7 +15,7 @@ some mantis shrimp travel by doing backflips
 
 the bible has been translated into Klingon
 
-ahdgsdshshsdsdhsdh
+worms on a string call that. a worm
 
 the nobel prize was first awarded in 1901
 
